# TailView

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .trivyignore.yaml  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.soak.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  promote.yml  release.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  api.py  auth.py  config.py  demo.py  findings.py  flow_data.py  main.py  models.py  operations.py  ops_cli.py  policy.py  reporting.py  saved_views.py  schemas.py  security.py  sync.py  tailscale.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_flow_address_lookup.py  0003_flow_query_indexes.py  0004_inventory_sources.py  0005_device_key_expiry_state.py  0006_security_posture.py  0007_access_governance.py  0008_findings_alerting.py  0009_local_identity.py  0010_saved_views.py  0011_network_reports.py  0012_reporting_experience.py  0013_operations_center.py  0014_v1_completion.py
backend/tailview.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: release_upgrade_check.py  test_access_governance.py  test_addresses.py  test_api_identity.py  test_data_scale.py  test_device_address_api.py  test_dns_api.py  test_findings.py  test_local_identity.py  test_navigation_capabilities.py  test_operations.py  test_policy.py  test_release_promotion.py  test_reporting.py  test_saved_views.py  test_security.py  test_sync.py  test_tailscale.py  test_v1_completion.py
deploy/: Caddyfile  backup.sh  release_validate.py  restore.sh  soak-check.sh  soak-common.sh  soak-finish.sh  soak-login.sh  soak-restart.sh  soak-start.sh  soak_evidence.py  verify-backup.sh
deploy/telemetry-agent/: Dockerfile  agent.py
docs/: API_CAPABILITIES.md  ARCHITECTURE.md  DEPLOYMENT.md  KNOWN_LIMITATIONS.md  POLICY_ENGINE.md  RELEASE_CHECKLIST.md  RELEASING.md  V1_COMPLETION.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/e2e/: demo.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  components.tsx  contrast.test.ts  main.tsx  operations.test.tsx  pages.tsx  reporting.test.tsx  savedViews.test.tsx  savedViews.tsx  styles.css  timeRange.tsx  types.ts  useDialogFocus.ts  v1Completion.test.tsx
frontend/src/test/: setup.ts
