[project]
name = "tailview"
version = "1.0.0"
description = "A read-only Tailscale tailnet observability dashboard"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.16.4",
  "apscheduler==3.11.0",
  "argon2-cffi==25.1.0",
  "cryptography==49.0.0",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "json5==0.12.0",
  "prometheus-client==0.22.1",
  "psycopg[binary,pool]==3.2.9",
  "pydantic-settings==2.10.1",
  "reportlab==4.4.3",
  "sqlalchemy[asyncio]==2.0.51",
  "starlette==1.3.1",
  "structlog==25.4.0",
  "uvicorn[standard]==0.35.0",
]

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.21.0",
  "mypy==1.17.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "respx==0.22.0",
  "ruff==0.12.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S106"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "reportlab.*"]
ignore_missing_imports = true
