[project]
name = "tailview"
version = "1.0.0"
description = "A read-only Tailscale tailnet observability dashboard"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.18.5",
  "apscheduler==3.11.3",
  "argon2-cffi==25.1.0",
  "cryptography==49.0.0",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "json5==0.15.0",
  "prometheus-client==0.25.0",
  "psycopg[binary,pool]==3.3.4",
  "pydantic-settings==2.14.2",
  "reportlab==5.0.0",
  "sqlalchemy[asyncio]==2.0.51",
  "starlette==1.3.1",
  "structlog==26.1.0",
  "uvicorn[standard]==0.41.0",
]

[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.22.1",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "respx==0.23.1",
  "ruff==0.15.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S106"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "reportlab.*"]
ignore_missing_imports = true
